# BlueTags

./: .env.example  .gitignore  Cargo.toml  PLAN.md
data/: mb_genre_mapping.csv  mb_genres_valid.csv
src/: audio_features.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs  pipeline.rs  rate_limit.rs
src/sources/: acousticbrainz.rs  acoustid.rs  discogs.rs  essentia.rs  lastfm.rs  mb_mapping.rs  mod.rs  musicbrainz.rs  wiki_song.rs  wikipedia.rs
src/tagger/: correction.rs  decade.rs  mod.rs  voter.rs  writer.rs
tests/: integration_test.rs
